# rootStaticAnalyzer

./: .editorconfig  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  prettify_code.sh
cmake/: FindOptionParser.cmake
src/: CMakeLists.txt  Makefile  classObject.cpp  errorHandling.cpp  errorHandling.h  rootStaticAnalyzer.cpp  streamingUtils.cpp  streamingUtils.h  utilityFunctions.cpp  utilityFunctions.h
src/include/: classObject.h  errorHandling.h  streamingUtils.h  testInterface.h  utilityFunctions.h
src/tests/: CMakeLists.txt  testConstructionDestruction.cpp  testDataObjBases.cpp  testIsA.cpp  testStreaming.cpp  testStreamingUninitialized.cpp  testingInitHook.cpp
src/tests/include/: testConstructionDestruction.h  testDataObjBases.h  testIsA.h  testStreaming.h  testStreamingUninitialized.h  testingInitHook.h
